# AI-Mispronunciation-Detection-and-Diagnosis-core-application

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
CNN_BiLSTM_CTC/: .gitignore  README.md  _confusion.py  evaluate.py  inference.py  requirements.txt  run_retrain.bat  train.py
CNN_BiLSTM_CTC/configs/: config.yaml
CNN_BiLSTM_CTC/src/: __init__.py
CNN_BiLSTM_CTC/src/callbacks/: __init__.py  early_stopping.py  model_checkpoint.py
CNN_BiLSTM_CTC/src/datasets/: __init__.py  collator.py  l2arctic_dataset.py  l2arctic_parser.py  tokenizer.py
CNN_BiLSTM_CTC/src/decoders/: __init__.py  (+2 more)
CNN_BiLSTM_CTC/tests/: test_dataset.py  test_decoder.py  test_model.py  test_tokenizer.py  test_trainer.py
DAB_Transformer_Project/: README.md  augment.py  config.py  dataset.py  model.py  plot_metrics.py  preprocess_resample.py  test_inference.py  train.py  utils.py
UI/: index.html
UI/css/: style.css
UI/js/: api.js  app.js  chart.js  recorder.js  ui.js
Wav2vec2/: .gitignore  main.py  requirements.txt  wav2vec.md
app/: main.py
app/api/: deps.py
app/core/: config.py  exceptions.py  logging.py  middleware.py
app/models/: base_model.py  cnn_bilstm_ctc_wrapper.py  dab_transformer_wrapper.py  normalize.py  wav2vec2_wrapper.py
app/schemas/: common.py  inference.py  model.py
app/services/: audio_service.py  inference_service.py  model_registry.py
app/utils/: file_utils.py  id_utils.py  time_utils.py
docs/: api_usage.md  model_integration.md
tests/: test_health.py  test_inference.py  test_models.py
ui/: app.js  index.html  styles.css
(+61 files in other folders)
